# three_task

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib.h  task1.hpp  task2.hpp  task3.hpp
src/test/: test1.cpp  test2.cpp  test3.cpp
